--- a/Hexcolor change/main.css
+++ b/Hexcolor change/main.css
@@ -1,22 +1,34 @@
 body{
   min-height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
-.colorBtn{
-  padding: 0.25rem 0.5rem;
-  border: 3px solid #fefefe;
-  border-radius: 7px;
-  color: #fefefe;
-  background: rgb(0,0,0,0.6);
-  font-size: 1.7rem;
+.container {
+  text-align: center;
+}
+
+.hexColor {
   text-transform: capitalize;
+}
+
+.hex {
+  font-size: 3rem;
+}
+
+.hexBtn {
+  color: #f15025;
+  border: 3px solid #f15025;
+  border-radius: 7 px;
+  background: rgba(0, 0, 0, 0.6);
+  font-size: 1.6rem;
+  padding: 0.25rem 0.5rem;
   cursor: pointer;
   outline: none;
+  text-transform: capitalize;
 }
 
-.colorBtn:hover{
-  background: rgb(0,0,0);
+.hexBtn:hover {
+  background: rgb(0, 0, 0);
 }
