--- a/Quotes Project/main.css
+++ b/Quotes Project/main.css
@@ -1,22 +1,44 @@
 body{
+  background-color: green;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
-}
-
-.colorBtn{
-  padding: 0.25rem 0.5rem;
-  border: 3px solid #fefefe;
-  border-radius: 7px;
-  color: #fefefe;
-  background: rgb(0,0,0,0.6);
-  font-size: 1.7rem;
+  justify-content: center;
+  color: #333;
+  font-family: 'calibri', sans-serif;
+  font-weight: 400;
   text-transform: capitalize;
-  cursor: pointer;
-  outline: none;
 }
 
-.colorBtn:hover{
-  background: rgb(0,0,0);
+.container {
+  text-align: center;
+  padding: 2rem;
+  border-radius: 5px;
+  background-color: #fff;
+  flex: 0 0 80%;
+}
+
+#quoteBtn {
+  border: none;
+  color: #fff;
+  background:#d89156;
+  font-size: 1.3rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+#quoteBtn:hover {
+  color: black;
+}
+
+blockquote{
+  background: #f9f9f9;
+  border-left: 10px solid #fcdbbf;
+  margin: 1.5rem;
+  padding: 0.5rem;
+}
+
+#quoteAuthor {
+  color: blue;
 }
