--- a/acme/css/style.css
+++ b/acme/css/style.css
@@ -1,73 +1,210 @@
-
 body{
-  font-family: Arial;
-  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:15px;
+  line-height:1.5;
+  padding:0;
+  margin:0;
+  background-color:#f4f4f4;
 }
 
-.column1{
-  float: left;
-  width: 70%;
-  padding: 10px;
-  border-right: 2px solid black;
+/*Global*/
+.dark{
+  padding: 15px;
+  background: #35424a;
+  color:#ffffff;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.navbar{
-  float: left;
-  width: 25%;
-}
-
-#years{
-  font-weight: bold;
-  padding-right: 30px;
-}
-
-#data{
-  font-style: italic;
-}
-
-
-h1{
-  font-family:"Georgia";
-  font-size: 24px;
-  font-weight: bold;
-  color: blue;
-  letter-spacing: 1em;
-  word-spacing: 1em;
-  text-align: center;
-  background-color: gray;
-
-}
-
-.head2{
-  font-family:"Georgia";
-  color: red;
-  font-size: 18px;
-  letter-spacing: 1em;
-}
-
-a:link{
-  text-decoration: none;
-}
-
-a:hover{
-  text-decoration: underline;
+.container{
+  width:80%;
+  margin:auto;
+  overflow:hidden;
 }
 
 header{
-  padding-bottom: 30px;
+  background:#35424a;
+  color:#ffffff;
+  padding-top;30px;
+  min-height:70px;
+  border-bottom:#e84191d 3px solid;
 }
 
-table{
-  border-spacing: 0;
-  border-collapse: collapse;
-
+header a{
+  color:#ffffff;
+  text-decoration:none;
+  text-transform:uppercase;
+  font-size: 16px;
 }
 
-tr{
+ul{
+  margin:0;
   padding: 0;
-  margin: 0;
 }
 
-li{
-  padding-bottom: 50px;
+header li{
+  float: left;
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+
+header #branding{
+  float:left;
+}
+
+header #branding h1 {
+  margin:0;
+}
+
+header nav{
+  float:right;
+  margin-top: 10px;
+}
+
+header .highlight, header .current a{
+  color:#e8491d;
+  font-weight:bold;
+}
+
+header a:hover{
+  color:#cccccc;
+  font-weight:bold;
+}
+
+.button_1{
+  height:38px;
+  background:#e8491d;
+  border: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  color:#ffffff;
+}
+
+footer {
+  padding: 5px;
+  margin-top: 20px;
+  text-align: center;
+  color:#ffffff;
+  background-color:#e8491d;
+}
+
+/* Showcase */
+#showcase {
+  min-height: 400px;
+  background:url('../img/showcase.jpg') no-repeat 0 -400px;
+  text-align:center;
+  color:#ffffff;
+}
+
+#showcase h1{
+  margin-top: 100px;
+  font-size:55px;
+  margin-bottom:10px;
+}
+
+#showcase p {
+  font-size: 20px;
+}
+
+
+/*Newsletter*/
+#newsletter{
+  padding: 15px;
+  color: #ffffff;
+  background: #35424a;
+}
+
+#newsletter h1{
+  float: left;
+}
+
+#newsletter form {
+  float:right;
+  margin-top: 15px;
+}
+
+#newsletter input[type="email"]{
+  padding: 4px;
+  height: 25px;
+  width: 250px;
+}
+
+/* Boxes */
+#boxes{
+  margin-top: 20px;
+}
+
+#boxes .box {
+  float:left;
+  width:30%;
+  padding: 10px;
+  text-align: center;
+}
+
+#boxes .box img{
+  width:50px;
+}
+
+/* Sidebar */
+aside.sidebar{
+  float: right;
+  width: 30%;
+  margin-top 10px;
+}
+
+aside.sidebar .quote input, aside#sidebar .quote textarea{
+  width: 90%;
+  padding: 5px;
+}
+
+
+/* Main-col */
+article#main-col{
+  float:left;
+  width: 65%;
+}
+
+
+c
+ul#services li{
+  list-style: none;
+  padding: 20px;
+  border: #cccccc solid 1px;
+  margin-bottom:5px;
+  background:#e6e6e6;
+}
+
+/* Media Queries */
+@media(max-width: 768px) {
+  header #branding,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box,
+  article#main-col,
+  aside.sidebar{
+    float:none;
+    text-align: center;
+    width: 100%;
+  }
+
+  header{
+    padding-bottom: 20px;
+  }
+
+  #showcase h1{
+    margin-top:40px;
+  }
+
+  #newsletter button{
+    display: block;
+    width: 100%;
+  }
+
+  #newsletter form input[type="email"]{
+    width: 100%;
+    margin-bottom:5px;
+  }
+
 }
